<resources>
    <string name="app_name">AddEmUp</string>
    <string name="instruction">Choose %1$s numbers that add up to %2$s!</string>
    <string name="wrong_amount">You have to select %1$s numbers!</string>
    <string name="wrong">"That's wrong!"</string>
    <string name="right">"That's right!"</string>
    <string name="points">Points: %1$s</string>
    <string name="level">Level: %1$s</string>
    <string name="time">Time left: %1$s</string>
    <string name="passed_level">You passed level %1$s with:</string>
    <string name="level_points">%1$s points</string>
    <string name="total_points">This brings your total points to:</string>
    <string name="save_quit">Save and quit</string>
    <string name="quit_no_save">Quit without saving</string>
    <string name="next_level">Continue to level %1$s</string>
    <string name="failed_level">You failed level %1$s with:</string>
    <string name="less_level_points">%1$s of the required %2$s points</string>
    <string name="final_points">This means your final score is:</string>
    <string name="to_menu">Back to menu</string>
    <string name="to_highscores">See high scores</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="high_scores">HIGH SCORES</string>
    <!--<string name="high_scores_top">HIGH SCORES - TOP 8</string>-->
    <string name="anonymous">Anonymous</string>
    <string name="no_resume_game">No saved game</string>
    <string name="submit">Submit</string>
    <string name="resume_game">Resume game</string>
    <string name="new_game">New game</string>
    <string name="time_for_level">- Time for level: %1$s</string>
    <string name="amount_to_add">- Add up %1$s numbers to get the goal</string>
    <string name="points_for_correct">- You will get %1$s points for each correct answer</string>
    <string name="points_to_pass_level">- You need %1$s points to pass this level!</string>
    <string name="claim_score">Claim your score by adding your name</string>
    <string name="save">Save</string>
    <string name="no_high_score">This is not a new high score</string>
    <string name="yes_high_score">This is a new high score!</string>
    <string name="signed_in_cancelled">Signing in failed</string>
    <string name="account">My account</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="edit_account">Edit account</string>
    <string name="statistics">Statistics</string>
    <string name="games_played">Games played: %1$d</string>
    <string name="highest_score">Highest score: %1$d</string>
    <string name="highest_level">Highest level reached: %1$d</string>
</resources>
